--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 	<div id = "navbarcontainer">
-		<div id = "header"><h1>MyPortfolio</h1></div>
+		<div id = "header"><h1>James Boussounis</h1></div>
 		
 		<nav id = "navbar">
 			<ul>
