--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<<<<<< Updated upstream
+
 <!doctype html>
 <html>
 <head>
@@ -9,7 +9,7 @@
 <body>
 
 	<div id = "navbarcontainer">
-		<div id = "header"><h1>James Boussounis</h1></div>
+		<div id = "header"><h1>Porto</h1></div>
 		
 		<nav id = "navbar">
 			<ul>
@@ -50,57 +50,4 @@
 	</div>
 
 </body>
-=======
-<!doctype html>
-<html>
-<head>
-	<title>James Boussounis - Portfolio</title>
-	<link rel="stylesheet" href="portfolio.css" type="text/css"/>
-</head>
-
-<body>
-
-	<div id = "navbarcontainer">
-		<div id = "header"><h1>MyPort</h1></div>
-		
-		<nav id = "navbar">
-			<ul>
-				<li><a href = "index.html">Home</a>|</li>
-				<li><a href = "about.html">About Me</a>|</li>
-				<li><a href = "experience.html">Experience</a>|</li>
-				<li><a href = "contact.html">Contact</a></li>
-				
-			</ul>
-		</nav>
-	</div>
-
-
-	<div id = "maincontainer">
-	
-		<div id = "photo">
-			<img src = "images/king.jpg" alt = "king" class = "photo"/>
-			
-		</div>
-
-		<div id = "main">
-			<h1 id = "welcome"> Hey, I'm James Boussounis </h1>
-		
-			<h2> Cybersecurity student.</h2>
-		
-			<p>
-			Fascinated by the possibilities of ethical hacking, AI, and algorithm 
-			optimisation, I'm driven to learn and refine my skills to create a 
-			smarter and safer future in technology.
-			</p>
-			
-			<a href = "about.html">
-				<button type = "button">Get to know me!</button>
-			</a>
-			
-		</div>
-	
-	</div>
-
-</body>
->>>>>>> Stashed changes
 </html>
