--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 		<nav id = "navbar">
 			<ul>
-				<li><a href = "index.php">Home</a>|</li>
+				<li><a href = "index.html">Home</a>|</li>
 				<li><a href = "about.html">About Me</a>|</li>
 				<li><a href = "experience.html">Experience</a>|</li>
 				<li><a href = "contact.html">Contact</a></li>
