--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 
 	<div id = "headnav">
-		<div id = "header"><h1>About</h1></div>
+		<div id = "header"><h1>About Me!</h1></div>
 		
 		<nav id = "navbar">
 			<ul>
@@ -23,6 +23,38 @@
 	</div>
 
 
+	<div id = "about">
+		Hi, I'm James Boussounis, born and raised in Melbourne, Australia and proudly come from a Greek heritage on both sides of 
+		my family. Although I have only visited Greece and my family living there once, I treasure the experience deeply and am 
+		longing to return again someday soon.
+			<br>
+			<br>
+		From a young age, I've had a strong ability in problem solving, and have always embraced this through a love for puzzles, 
+		maths, logical challenges and strategic games. I hope to continue to embrace this through a career in software development, 
+		where I can apply my skills to real-world challenges.
+			<br>
+			<br>
+		I'm currently studying a diploma of Cybersecurity at La Trobe College, with plans to continue my journey at La Trobe 
+		University, pursuing a Bachelor of Information Technology, majoring in software development. Whilst cybersecurity sparks my 
+		interest with its rapid growing industry and vast opportunities, my true passion lies in software development - where I 
+		can tackle complex problems and formulate solutions that can make a real impact.
+			<br>
+			<br>		
+		Outside of my studies, my hobbies include my love for puzzles - from Rubik's cubes and their variants to cracking variant 
+		sudokus and the	occasional jigsaw. I also have an great appreciation for the outdoors, enjoying camping and a good hike, 
+		as well as recent passion for skating. Proudly supporting the Carlton Football Club through their highs and lows, my 
+		passion for the AFL has been a huge part of my life for as long as I can remember, both playing and as a fan.
+			<br>
+			<br>
+		With a commitment for learning and refining my knowledge, I'm driven to push my capabilities to achieve my goals of 
+		pursuing a career as a highly skilled software developer.
+
+
+
+
+
+
+	</div>
 	
 	<footer>
 	
