--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 
 <body>
+	<h1 id = "header">James Boussounis - My Portfolio</h1>
 
-	<div id = "headnav">
-		<div id = "header"><h1>Home</h1></div>
+
+	<div id = "navbar">
+		<div id = "navpage"><h1>Home</h1></div>
 		
-		<nav id = "navbar">
+		<nav id = "nav">
 			<ul>
 				<li><a href = "index.html">Home</a>|</li>
 				<li><a href = "about.html">About Me</a>|</li>
