about a pain in my ass

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
 			<br>
 			<br>
 		I'm currently studying a diploma of Cybersecurity at La Trobe College, with plans to continue my journey at La Trobe 
-		University, pursuing a Bachelor of Information Technology, majoring in software development. Whilst cybersecurity sparks my 
-		interest with its rapid growing industry and vast opportunities, my true passion lies in software development - where I 
+		University, pursuing a Bachelor of Information Technology and majoring in software development. Whilst cybersecurity sparks my 
+		interest with its rapidly growing industry and vast opportunities, my true passion lies in software development - where I 
 		can tackle complex problems and formulate solutions that can make a real impact.
 			<br>
 			<br>		
@@ -50,11 +50,27 @@
 			<br>
 		With a commitment for learning and refining my knowledge, I'm driven to push my capabilities to achieve my goals of 
 		pursuing a career as a highly skilled software developer.
-
-
-
-
-
+	</div>
+	
+	<div>
+		<h1 id = "about_header"> Gallery <h1>
+	
+	</div>
+	
+	<div id = "gallery">
+		<img src = "images/puzzle.jpeg" alt = "Jigsaw puzzle with my brother" class = "row1"/>
+		<img src = "images/hikepeak.jpeg" alt = "Peak of a hike at the Glasshouse Mountains" class = "row1"/>
+		<img src = "images/crippscurnow.jpeg" alt = "My brother and I meeting Carlton players Cripps & Curnow" class = "row1"/>
+			<br>
+		<img src = "images/hikescarlett.jpeg" alt = "Hike at the Glasshouse Mountains with my girlfriend Scarlett" class = "row2"/>
+		<img src = "images/camping.jpeg" alt = "Camping under the stars" class = "row2"/>
+		<video controls alt = "Solving a Rubik's cube" class = "row2">
+			<source src = "videos/rubiks.mp4" type = "video/mp4" class = "row2">
+			Your browser does not support the video tag.
+		</video>
+			<br>
+		<img src = "images/greece.jpeg" alt = "Looking overs Athens from the Acropolis" class = "row3"/>
+		<img src = "images/skating.jpeg" alt = "Skating at a skate park" class = "row3"/>
 
 	</div>
 	
