changed the king  :,(

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 				<br>
 				<br>		
 			Outside of my studies, my hobbies include my love for puzzles - from Rubik's cubes and their variants to cracking variant 
-			sudokus and the	occasional jigsaw. I also have an great appreciation for the outdoors, enjoying camping and a good hike, 
+			sudokus and the	occasional jigsaw. I also have a great appreciation for the outdoors, enjoying camping and a good hike, 
 			as well as recent passion for skating. Proudly supporting the Carlton Football Club through their highs and lows, my 
 			passion for the AFL has been a huge part of my life for as long as I can remember, both playing and as a fan.
 				<br>
