--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div id = "maincontainer">
 	
 		<div id = "photo">
-			<img src = "images/king.jpg" alt = "king" class = "photo"/>
+			<img src = "images/welcome_photo.jpeg" alt = "James Boussounis - portrait" class = "photo"/>
 			
 		</div>
 
