submitted assignment (no php)
finallyyyyyyyyy

--- a/about.html
+++ b/about.html
@@ -17,9 +17,8 @@
 			<ul>
 				<li><a href = "index.html">Home</a>|</li>
 				<li><a href = "about.html">About Me</a>|</li>
-				<li><a href = "experience.html">Experience</a>|</li>
-				<li><a href = "contact.html">Contact</a></li>
-				
+				<li><a href = "future.html">Future Plans</a></li>
+
 			</ul>
 		</nav>
 	</div>
@@ -65,19 +64,19 @@
 	</div>
 	
 	<div id = "gallery">
-		<img src = "images/puzzle.jpeg" alt = "Jigsaw puzzle with my brother" class = "row1"/>
-		<img src = "images/hikepeak.jpeg" alt = "Peak of a hike at the Glasshouse Mountains" class = "row1"/>
-		<img src = "images/crippscurnow.jpeg" alt = "My brother and I meeting Carlton players Cripps & Curnow" class = "row1"/>
+		<a href = "images/puzzle.jpeg" target = "_blank"><img src = "images/puzzle.jpeg" alt = "Jigsaw puzzle with my brother" class = "row1"/></a>
+		<a href = "images/hikepeak.jpeg" target = "_blank"><img src = "images/hikepeak.jpeg" alt = "Peak of a hike at the Glasshouse Mountains" class = "row1"/>
+		<a href = "images/crippscurnow.jpeg" target = "_blank"><img src = "images/crippscurnow.jpeg" alt = "My brother and I meeting Carlton players Cripps & Curnow" class = "row1"/>
 			<br>
-		<img src = "images/hikescarlett.jpeg" alt = "Hike at the Glasshouse Mountains with my girlfriend Scarlett" class = "row2"/>
-		<img src = "images/camping.jpeg" alt = "Camping under the stars" class = "row2"/>
-		<video controls alt = "Solving a Rubik's cube" class = "row2">
+		<a href = "images/hikescarlett.jpeg" target = "_blank"><img src = "images/hikescarlett.jpeg" alt = "Hike at the Glasshouse Mountains with my girlfriend Scarlett" class = "row2"/>
+		<a href = "images/camping.jpeg" target = "_blank"><img src = "images/camping.jpeg" alt = "Camping under the stars" class = "row2"/>
+		<a href = "videos/rubiks.mp4" target = "_blank"><video controls alt = "Solving a Rubik's cube" class = "row2">
 			<source src = "videos/rubiks.mp4" type = "video/mp4" class = "row2">
 			Your browser does not support the video tag.
 		</video>
 			<br>
-		<img src = "images/greece.jpeg" alt = "Looking overs Athens from the Acropolis" class = "row3"/>
-		<img src = "images/skating.jpeg" alt = "Skating at a skate park" class = "row3"/>
+		<a href = "images/greece.jpeg" target = "_blank"><img src = "images/greece.jpeg" alt = "Looking overs Athens from the Acropolis" class = "row3"/>
+		<a href = "images/skating.jpeg" target = "_blank"><img src = "images/skating.jpeg" alt = "Skating at a skate park" class = "row3"/>
 
 	</div>
 	
@@ -92,7 +91,7 @@
 	<br><br>
 	<a href="mailto:767868@learning.latrobemelbourne.edu.au" class = "email">767868@learning.latrobemelbourne.edu.au</a>
 	<br><br>
-	© 2025 James Boussounis. All Rights Reserved.
+	&copy; 2025 James Boussounis. All Rights Reserved.
 	</footer>
 
 </body>
